Added homepage button to Garlic Chicken Rigatoni

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>
-        Odin Recipes 
+        Some of my favorite recipes!
     </h1>
+    By Brady Gin <br>
+    A simple website built using HTML showcasing some of my favorite recipes!
     <ul>
         <li><a href="recipes/garlic-chicken-rigatoni.html">Garlic Chicken Rigatoni</a></li>
+        <li><a href="recipes/grilled-pbandj.html">Grilled PB&J</a></li>
     </ul>
 </body>
 </html>
