--- a/recipes/garlic-chicken-rigatoni.html
+++ b/recipes/garlic-chicken-rigatoni.html
@@ -31,5 +31,6 @@
         <li>Mix in white wine, cream and Cheddar cheese. Whisk until sauce is slightly thickened. Add rigatoni and toss to combine.</li>
         <li>Add rigatoni and toss to combine. Serve immediately.</li>
     </ol>
+    <a href="../index.html"> Back to homepage</a>
 </body>
 </html>
