--- a/recipes/garlic-chicken-rigatoni.html
+++ b/recipes/garlic-chicken-rigatoni.html
@@ -15,7 +15,7 @@
     <h2>Ingredients</h2>
     <ul>
         <li>Rigatoni pasta</li>
-        <li>Salt</li>e 
+        <li>Salt</li>
         <li>Chicken breasts</li>
         <li>Olive oil</li>
         <li>Tapioca starch</li>
