Added link to last recipe

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href="recipes/garlic-chicken-rigatoni.html">Garlic Chicken Rigatoni</a></li>
         <li><a href="recipes/grilled-pbandj.html">Grilled PB&J</a></li>
+        <li><a href="recipes/pizza-bombs.html">Pizza Bombs</a></li>
     </ul>
 </body>
 </html>
